# A1Task

./: .env_test  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 54a654b17512_usertable.py
src/A1Task/: __init__.py  common.py
src/A1Task/api/: main.py  models.py  user.py
src/A1Task/api_functions/: etl.py  user_function.py
tests/api/: conftest.py  test_users.py
